--- a/PlanetWallet/Resources/7_1_Planet.storyboard
+++ b/PlanetWallet/Resources/7_1_Planet.storyboard
@@ -298,9 +298,6 @@
                                                     <constraint firstAttribute="height" constant="30" id="2vk-Rd-lDH"/>
                                                     <constraint firstAttribute="width" constant="50" id="UT0-vq-v4J"/>
                                                 </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isOn" value="YES"/>
-                                                </userDefinedRuntimeAttributes>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -485,6 +482,7 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <connections>
+                        <outlet property="hidePlanetSwitch" destination="umC-gn-ThG" id="6r8-VL-GBM"/>
                         <outlet property="naviBar" destination="t5t-WL-grU" id="2eF-R7-K1d"/>
                     </connections>
                 </viewController>
