--- a/PlanetWallet/Views/4_Main/Cells/RefreshContents.xib
+++ b/PlanetWallet/Views/4_Main/Cells/RefreshContents.xib
@@ -6,39 +6,23 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RefreshContents" customModule="PlanetWallet" customModuleProvider="target">
+            <connections>
+                <outlet property="containerView" destination="iN0-l3-epB" id="hC8-ms-d8U"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K60-fP-9Co">
-                    <rect key="frame" x="184.5" y="7.5" width="45" height="45"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="BEe-ZU-5NL"/>
-                        <constraint firstAttribute="width" constant="45" id="gpN-qe-yUw"/>
-                    </constraints>
-                </view>
-            </subviews>
-            <color key="backgroundColor" name="errorText"/>
-            <constraints>
-                <constraint firstItem="K60-fP-9Co" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="n5x-4a-Uai"/>
-                <constraint firstItem="K60-fP-9Co" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="zea-hT-q3O"/>
-            </constraints>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="-110.14492753623189" y="48.883928571428569"/>
         </view>
     </objects>
-    <resources>
-        <namedColor name="errorText">
-            <color red="1" green="0.0" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-    </resources>
 </document>
