--- a/PlanetWallet/Resources/4_Main.storyboard
+++ b/PlanetWallet/Resources/4_Main.storyboard
@@ -19,10 +19,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Main Navigation Controller-->
         <scene sceneID="dLq-oM-is2">
             <objects>
-                <navigationController storyboardIdentifier="mainNavigationController" id="2bt-tB-4P6" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="mainNavigationController" id="2bt-tB-4P6" customClass="MainNavigationController" customModule="PlanetWallet" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zUe-Qr-XZs">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
