--- a/PlanetWallet/Views/3_Wallet/Popups/PopupUniverse.xib
+++ b/PlanetWallet/Views/3_Wallet/Popups/PopupUniverse.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -21,15 +21,15 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="311" height="117"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="353" height="117"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="S65-CH-9rb">
-                    <rect key="frame" x="0.0" y="15" width="311" height="87"/>
+                    <rect key="frame" x="0.0" y="15" width="353" height="87"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tck-OU-9bC">
-                            <rect key="frame" x="0.0" y="0.0" width="311" height="41"/>
+                            <rect key="frame" x="0.0" y="0.0" width="353" height="41"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tokenIconBTC" translatesAutoresizingMaskIntoConstraints="NO" id="lwL-gn-CQm">
                                     <rect key="frame" x="20" y="10.5" width="20" height="20"/>
@@ -41,11 +41,16 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC Universe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D86-NW-BhI" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                                     <rect key="frame" x="48" y="10.5" width="90.5" height="20.5"/>
                                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                            <color key="value" red="0.0039215686274509803" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KFQ-N0-wDT">
-                                    <rect key="frame" x="0.0" y="0.0" width="311" height="41"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="41"/>
                                     <connections>
                                         <action selector="didTouched:" destination="-1" eventType="touchUpInside" id="htL-9c-6JX"/>
                                     </connections>
@@ -61,10 +66,11 @@
                                 <constraint firstItem="lwL-gn-CQm" firstAttribute="leading" secondItem="tck-OU-9bC" secondAttribute="leading" constant="20" id="hT9-ZD-Sor"/>
                                 <constraint firstItem="D86-NW-BhI" firstAttribute="centerY" secondItem="lwL-gn-CQm" secondAttribute="centerY" id="oxs-iD-HkP"/>
                                 <constraint firstItem="D86-NW-BhI" firstAttribute="leading" secondItem="lwL-gn-CQm" secondAttribute="trailing" constant="8" id="ram-bg-l7q"/>
+                                <constraint firstAttribute="height" constant="41" id="uba-e9-2nI"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ts6-qk-kJi">
-                            <rect key="frame" x="0.0" y="46" width="311" height="41"/>
+                            <rect key="frame" x="0.0" y="46" width="353" height="41"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tokenIconETH" translatesAutoresizingMaskIntoConstraints="NO" id="9Ui-KE-7wT">
                                     <rect key="frame" x="20" y="10.5" width="20" height="20"/>
@@ -76,11 +82,16 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH Universe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZb-wp-mIO" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                                     <rect key="frame" x="48" y="10.5" width="91" height="20.5"/>
                                     <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                            <color key="value" red="0.0039215686274509803" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ymY-ma-tDK">
-                                    <rect key="frame" x="0.0" y="0.0" width="311" height="41"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="353" height="41"/>
                                     <connections>
                                         <action selector="didTouched:" destination="-1" eventType="touchUpInside" id="TUY-gX-U4t"/>
                                     </connections>
@@ -94,6 +105,7 @@
                                 <constraint firstItem="9Ui-KE-7wT" firstAttribute="centerY" secondItem="ts6-qk-kJi" secondAttribute="centerY" id="HnO-ZN-xqi"/>
                                 <constraint firstAttribute="trailing" secondItem="ymY-ma-tDK" secondAttribute="trailing" id="ScW-OV-oNc"/>
                                 <constraint firstAttribute="bottom" secondItem="ymY-ma-tDK" secondAttribute="bottom" id="TaD-cN-SyS"/>
+                                <constraint firstAttribute="height" constant="41" id="Yen-JE-08y"/>
                                 <constraint firstItem="ymY-ma-tDK" firstAttribute="top" secondItem="ts6-qk-kJi" secondAttribute="top" id="aYb-pg-g6G"/>
                                 <constraint firstItem="MZb-wp-mIO" firstAttribute="leading" secondItem="9Ui-KE-7wT" secondAttribute="trailing" constant="8" id="i6k-NI-fUZ"/>
                             </constraints>
@@ -101,7 +113,7 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="S65-CH-9rb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="1V0-ed-hBK"/>
                 <constraint firstAttribute="bottom" secondItem="S65-CH-9rb" secondAttribute="bottom" constant="15" id="64p-Vf-edi"/>
@@ -113,6 +125,9 @@
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                     <real key="value" value="5"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
+                    <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
             <point key="canvasLocation" x="131.15942028985509" y="152.34375"/>
